--- a/css/home.css
+++ b/css/home.css
@@ -51,6 +51,10 @@
     margin: var(--spaceing-medium);
   }
 
+  .welcome h1,p{
+    margin-left: var(--spacing-small);
+  }
+
   h1 {
 
     font-size: 2.5rem;
